# aeberscale

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
aeberscale/: __init__.py  finder.py  syllabus.py  utils.py
evaluation/: README.md
evaluation/src/: evaluate.py  transcribe.py
tests/: test_finder.py  test_scales.py
