[tool.poetry]
name = "aeberscale"
version = "0.1.2"
description = "A simple key-finding algorithm designed for jazz"
authors = ["Huw Cheston <h.cheston@qmul.ac.uk>"]
license = "MIT"
homepage = "https://github.com/HuwCheston/aeberscale"
repository = "https://github.com/HuwCheston/aeberscale"
keywords = ["jazz", "music information retrieval"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
readme = "README.md"
packages = [
    { include = "aeberscale/*", format=["sdist", "wheel"]}
]
exclude = [
    "evaluation/**",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
black = "*"
isort = "*"
flake8 = "*"
twine = "*"
build = "*"
coverage = "^7.13.4"

[tool.poetry.group.eval.dependencies]
basic-pitch = "*"
piano_transcription_inference = "*"
pretty-midi = "*"
numpy = "1.26.4"
levenshtein = "*"
torch = "^2.10.0"
setuptools = "^82.0.0"
rapidfuzz = "^3.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"